--- a/aboutwindow.ui
+++ b/aboutwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>FenApropos</class>
- <widget class="QDialog" name="FenApropos">
+ <class>AboutWindow</class>
+ <widget class="QDialog" name="AboutWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -85,7 +85,7 @@ p, li { white-space: pre-wrap; }
   <connection>
    <sender>OK</sender>
    <signal>clicked()</signal>
-   <receiver>FenApropos</receiver>
+   <receiver>AboutWindow</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
