--- a/ressources.qrc
+++ b/ressources.qrc
@@ -1,5 +1,5 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-     <file>images/icone.ico</file>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>images/icon.ico</file>
+    </qresource>
 </RCC>
